--- a/prometheus-grafana/prometheus/prometheus.yml
+++ b/prometheus-grafana/prometheus/prometheus.yml
@@ -9,6 +9,7 @@ alerting:
     scheme: http
     timeout: 10s
     api_version: v1
+
 scrape_configs:
 - job_name: prometheus
   honor_timestamps: true
@@ -19,3 +20,7 @@ scrape_configs:
   static_configs:
   - targets:
     - localhost:9090
+
+- job_name: node
+  static_configs:
+    - targets: ['local-node-exporter:9100']
