Add in trafik reverse proxy, and also add scaffolding to use .env as a fallback when we can't use proper docker secrets

--- a/compose.prometheus-grafana.yml
+++ b/compose.prometheus-grafana.yml
@@ -30,5 +30,10 @@ services:
     volumes:
       - ./prometheus-grafana/grafana/provisioning:/etc/grafana/provisioning
 
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.grafana.rule=Host(`grafana.${HOSTNAME}`)"
+      - "traefik.http.routers.grafana.entrypoints=web"
+
 volumes:
   prom_data:
