--- a/prometheus-grafana/prometheus/prometheus.yml
+++ b/prometheus-grafana/prometheus/prometheus.yml
@@ -24,3 +24,9 @@ scrape_configs:
 - job_name: node
   static_configs:
     - targets: ['local-node-exporter:9100']
+
+- job_name: 'unifi-poller'
+  scrape_interval: 30s
+  static_configs:
+  - targets: ['unifi-poller:9130']
+  
