--- a/pihole/compose.pihole.yml
+++ b/pihole/compose.pihole.yml
@@ -48,6 +48,22 @@ services:
     networks:
       - dns-net
 
+  pihole-exporter:
+    container_name: pihole-exporter
+    image: ekofr/pihole-exporter:latest
+    restart: unless-stopped
+    hostname: 'pihole-exporter'
+    ports:
+      - "9617:9617"
+    environment:
+      - PIHOLE_HOSTNAME=pihole
+      - PIHOLE_PASSWORD=${PIHOLE_PW}
+      - INTERVAL=30s
+      - PORT=9617
+    networks:
+      - dns-net # so it can talk to pi hole
+      - default # so prometheus can talk to it. # TODO: Put all the prometheus scraping on it's own thing. 
+
 networks:
   dns-net:
     ipam:
