all the traefik reverse proxy things working now (traefik.docker.network is the key!), now for ssl

--- a/node-exporter/compose.node-exporter.yml
+++ b/node-exporter/compose.node-exporter.yml
@@ -21,3 +21,6 @@ services:
       - 9100:9100
     pid: host
     restart: unless-stopped
+    networks:
+      - prometheus-net # so prometheus can talk to it. 
+
