move all the .env and .env.example references to the root folder, and add namespacing. Much tidier

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,29 @@
+# General
 HOSTNAME=localhost
-HOST_IP=127.0.0.1
-HOST_IPV=::1
+HOST_IPV4=127.0.0.1
+HOST_IPV6=::1
+
+# Pi Hole
+PIHOLE_TIMEZONE=Australia/Melbourne
+PIHOLE_PW=changeit
+# Default values for CONDITIONAL_FORWARDING with AVM FRITZ!Box
+PIHOLE_ROUTER_IP=192.168.10.1
+PIHOLE_NETWORK_DOMAIN=fritz.box
+PIHOLE_REVERSE_DNS=192.168.10.0/24
+PIHOLE_HOST_IP=${HOST_IPV4}
+PIHOLE_HOST_IPV6=${HOST_IPV6}
+
+# Tailscale
+TAILSCALE_AUTHKEY=the-secret-key-you-got-from-tailscale
+
+# Traefik
+TRAEFIK_CF_DNS_API_TOKEN=gimmi-gimmi-https://go-acme.github.io/lego/dns/cloudflare/
+
+# Unifi Poller
+# The password for the user created in the unifi admin, instructions at
+# https://unpoller.com/docs/install/gettingstarted#configuring-the-controller
+UNIFI_DEFAULT_USER='unifipoller'
+UNIFI_DEFAULT_PASS='some-great-password'
+# URL for the UniFi Controller. Do not add any paths after the host:port
+# Do not use port 8443 if you have a UDM; just use "https://ip".
+UNIFI_DEFAULT_URL='https://192.168.10.1'
