--- a/pihole/compose.pihole.yml
+++ b/pihole/compose.pihole.yml
@@ -7,7 +7,7 @@ services:
       - "5054:5054/tcp"
       - "5054:5054/udp"
     environment:
-      - TZ=${TIMEZONE}
+      - TZ=${PIHOLE_TIMEZONE}
       - PORT=5054
       - ADDRESS=0.0.0.0
     restart: always
@@ -25,21 +25,21 @@ services:
       # - "8888:80/tcp"
       # - "8443:443/tcp"
     environment:
-      - TZ=${TIMEZONE}
+      - TZ=${PIHOLE_TIMEZONE}
       - PIHOLE_DNS_=172.20.0.2#5054;1.1.1.1 # referencing by name results in "Invalid IP detected in PIHOLE_DNS_: cloudflared#5054"
       - WEBPASSWORD=${PIHOLE_PW}
       - REV_SERVER=true
       - REV_SERVER_TARGET=${PIHOLE_ROUTER_IP}
       - REV_SERVER_DOMAIN=${PIHOLE_NETWORK_DOMAIN}
       - REV_SERVER_CIDR=${PIHOLE_REVERSE_DNS}
-      # - FTLCONF_LOCAL_IPV4=${PIHOLE_HOST_IP}
-      # - FTLCONF_LOCAL_IPV6=${PIHOLE_HOST_IPV6}
+      # - FTLCONF_LOCAL_IPV4=${HOST_IPV4}
+      # - FTLCONF_LOCAL_IPV6=${HOST_IPV6}
     dns:
       - 127.0.0.1 # "Sets your container's resolve settings to localhost so it can resolve DHCP hostnames [...]" - github.com/pi-hole/docker-pi-hole
       - 1.1.1.1 # Backup server
     # I'm just including an opinionated set here. It's my setup :D
     extra_hosts:
-      - "pihole.${HOSTNAME}:${HOST_IP}"
+      - "pihole.${HOSTNAME}:${HOST_IPV4}"
 
     volumes: # store your data between container upgrades
       - "/etc/pihole/:/etc/pihole/"
