--- a/tailscale/compose.tailscale.yml
+++ b/tailscale/compose.tailscale.yml
@@ -13,7 +13,7 @@
         - sys_module 
       environment:
         - TS_STATE_DIR=/var/lib/tailscale
-        - TS_AUTHKEY=${TS_AUTHKEY}
+        - TS_AUTHKEY=${TAILSCALE_AUTHKEY}
         - TS_EXTRA_ARGS=--advertise-exit-node
         - TS_HOSTNAME=${HOSTNAME}
       restart: unless-stopped
