move everything to .env, docker secrets aren't well supported enough

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@ HOSTNAME=localhost
 HOST_IPV4=127.0.0.1
 HOST_IPV6=::1
 
+# Grafana
+GRAFANA_GF_SECURITY_ADMIN_PASSWORD=please-oh-gawd-change-me
+
 # Pi Hole
 PIHOLE_TIMEZONE=Australia/Melbourne
 PIHOLE_PW=changeit
